# project_euler

./: Makefile  README.md  pyproject.toml
problems/0001-multiples-of-3-or-5/: 0001_solution.py  solution.py
problems/0002-even-fibonacci-numbers/: 0002_solution.py  solutions.py
problems/0003-largest-prime-factor/: 0003_solution.py
problems/0004-largest-palindrome-product/: 0004_solution.py
problems/0005-smallest-multiple/: 0005_solution.py
problems/0006-sum-square-difference/: 0006_solution.py
problems/0007-10001st-prime/: 0007_solution.py
problems/0008-largest-product-in-a-series/: 0008_solution.py
problems/0009-special-pythagorean-triplet/: 0009_solution.py  example.tex
problems/0989-fibonacci-sum/: 0989_solution.py  example.tex
scripts/: new_problem.sh
src/euler/: __init__.py
src/euler/math/: __init__.py  primes.py
