[project]
name = "euler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "ruff", 
    "mypy", 
    "codespell"
]

[tool.ruff]
target-version = 'py312'
line-length = 120

lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear (common bugs / anti-patterns)
    "UP",   # pyupgrade (modern Python syntax)
    "SIM",  # simplify code patterns
    "C4",   # better comprehensions
    "D",    # docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

disallow_any_generics = true
no_implicit_optional = true

check_untyped_defs = true
