[project]
name = "euler"
version = "0.1.0"
description = "Holds solutions for Project Euler problems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "ruff", 
    "mypy", 
    "codespell"
]

# Ensure libary is installable
[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Lint / Format configuration
[tool.ruff]
target-version = 'py312'
line-length = 120

lint.select = [
    "E",    # Pycodestyle errors
    "F",    # Pyflakes
    "I",    # Import sorting
    "B",    # Bugbear (common bugs / anti-patterns)
    "UP",   # Pyupgrade (modern Python syntax)
    "SIM",  # Simplify code patterns
    "C4",   # Better comprehensions
    "D",    # Docstrings
]

lint.ignore = [
    "D212",  # No blank line before docstring
    "D415",  # First line should end with punctuation
    "D205"   # Blank line after summary docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

disallow_any_generics = true
no_implicit_optional = true

check_untyped_defs = true
